@@ -3,7 +3,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-sound-ymfm</artifactId>
-  <version>0.0.15</version>
+  <version>0.0.16</version>
 
   <profiles>
     <profile>
@@ -65,6 +65,8 @@
         <configuration>
           <argLine>
             --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-opens java.base/java.io=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             -Dvavi.test.volume=@{vavi.test.volume}
             -Dmdsound.pcm.path=@{mdsound.pcm.path}
@@ -104,13 +106,13 @@
     <dependency>
       <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
       <artifactId>vavi-util-archive</artifactId>
-      <version>1.1.12</version>
+      <version>1.1.13</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
       <artifactId>vavi-sound</artifactId>
-      <version>1.0.24</version>
+      <version>1.0.28</version>
     </dependency>
 
     <dependency>
@@ -137,7 +139,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
-      <version>2.0.16</version>
+      <version>2.0.18</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
